include/environ.h

void clear_env();
char** save_env();
void restore_env(char** envs);